fixed styles hero section tablet. Added lessons section with styles and image.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -68,13 +68,6 @@ h6 {
   }
 }
 
-/* .container {
-  width: 100%;
-  max-width: 100%;
-  margin: 0 auto;
-  padding: 0 20px;
-} */
-
 .container {
   min-width: 320px;
   max-width: 375px;
@@ -96,6 +89,5 @@ h6 {
   .container {
     max-width: 1440px;
     padding: 0 64px;
-    margin: 0;
   }
 }
